iotagent-ul/iotagent-ul-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ul-agent
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ul-agent.k8s.fiwoo.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: iotagent-ul
          servicePort: 4041
